<resources>
    <string name="app_name">VoiceMaster</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="text_cypress_self">王柏行掌握面向对象编程的思想，扎实的C++功底，熟练掌握VC++,VS.NET等开发工具;掌握COM技术，有COM开发经验;熟悉MFC、SDK、多线程、gdi+、winsocket等;熟悉各种网络协议，如：tcp/ip，http，soap协议;深入理解XML，有丰富的XML开发经验，熟练掌握DOM、SAX解析过程;熟悉SQLSERVER，能独立完成系统的分析、设计和开发。有良好的编程习惯，能够编写高内聚松耦合的模块。有较强的团队合作精神。善于总结开发经验，能够合理的运用设计模式进行开发，热爱编程工作，并具有良好的自学能力，适应能力，做事积极性高。</string>
    <string name="app_id">5e6b5006</string>
    <string name="example_explain">本示例为讯飞语音Android平台开发者提供语音听写、语法识别、语义理解和语音合成等代码样例，旨在让用户能够依据该示例快速开发出基于语音接口的应用程序。</string>
    <string name="text_tts_source">
        科大讯飞作为中国最大的智能语音技术提供商，在智能语音技术领域有着长期的研究积累，并在中文语音合成、语音识别、口语评测等多项技术上拥有国际领先的成果。科大讯飞是我国唯一以语音技术为产业化方向的“国家863计划成果产业化基地”…
    </string>
    <string name="text_tts_source_en">iFLYTEK is a national key software enterprise dedicated to the research of intelligent speech and language technologies, development of software and chip products, provision of speech information services, and integration of E-government systems. The intelligent speech technology of iFLYTEK, the core technology of the company, represents the top level in the world.
    </string>
    <string name="text_isr_abnf_hint">\t上传内容为：\n\t#ABNF 1.0 gb2312;\n\tlanguage zh-CN;\n\tmode voice;\n\troot $main;\n\t$main = $place1 到$place2 ;\n\t$place1 = 北京 | 武汉 | 南京 | 天津 | 东京;\n\t$place2 = 上海 | 合肥;</string>
    <string name="text_understand_hint">\t您可以说：\n\t今天的天气怎么样?\n\t北京到上海的火车?\n\t来首歌吧?\n\n\t更多语义请登录：\n\thttp://aiui.xfyun.cn/ \n\t配置您的专属语义吧!</string>
    <string name="text_begin">请开始说话&#8230;</string>
    <string name="text_begin_recognizer">开始音频流识别</string>
    <string name="text_upload_contacts">上传联系人</string>
    <string name="text_upload_userwords">上传用户词表</string>
    <string name="text_upload_success">上传成功</string>
    <string name="text_userword_empty">词表下载失败或内容为空</string>
    <string name="text_download_success">下载成功</string>
    <string name="pref_key_iat_show">iat_show</string>
    <string name="pref_title_iat_show">显示听写界面</string>
    <string name="pref_key_translate">translate</string>
    <string name="pref_title_translate">翻译</string>
    <string name="title_face_idf">人脸1:N检索示例</string>
    <string name="title_vocal_idf">声纹1:N检索示例</string>
    <string-array name="engine_entries">
        <item>本地合成</item>
        <item>在线合成</item>
    </string-array>
    <string-array name="engine_values">
        <item>local</item>
        <item>cloud</item>
    </string-array>
    <string-array name="voicer_cloud_entries">
        <item>小燕—女青、中英、普通话</item>
        <item>小宇—男青、中英、普通话</item>
        <item>凯瑟琳—女青、英</item>
        <item>亨利—男青、英</item>
        <item>玛丽—女青、英</item>
        <item>小研—女青、中英、普通话</item>
        <item>小琪—女青、中英、普通话</item>
        <item>小峰—男青、中英、普通话</item>
        <item>小梅—女青、中英、粤语</item>
        <item>小莉—女青、中英、台湾普通话</item>
        <item>小蓉—女青、中、四川话</item>
        <item>小芸—女青、中、东北话</item>
        <item>小坤—男青、中、河南话</item>
        <item>小强—男青、中、湖南话</item>
        <item>小莹—女青、中、陕西话</item>
        <item>小新—男童、中、普通话</item>
        <item>楠楠—女童、中、普通话</item>
        <item>老孙—男老、中、普通话</item>
    </string-array>
    <string-array name="voicer_cloud_values">
        <item>xiaoyan</item>
        <item>xiaoyu</item>
        <item>catherine</item>
        <item>henry</item>
        <item>vimary</item>
        <item>vixy</item>
        <item>xiaoqi</item>
        <item>vixf</item>
        <item>xiaomei</item>
        <item>xiaolin</item>
        <item>xiaorong</item>
        <item>xiaoqian</item>
        <item>xiaokun</item>
        <item>xiaoqiang</item>
        <item>vixying</item>
        <item>xiaoxin</item>
        <item>nannan</item>
        <item>vils</item>
    </string-array>
    <string-array name="emot_entries">
        <item>正常</item>
        <item>高兴</item>
        <item>悲伤</item>
        <item>生气</item>
    </string-array>
    <string-array name="emot_values">
        <item>neutral</item>
        <item>happy</item>
        <item>sad</item>
        <item>angry</item>
    </string-array>
    <string-array name="stream_entries">
        <item>通话</item>
        <item>系统</item>
        <item>铃声</item>
        <item>音乐</item>
        <item>闹铃</item>
        <item>通知</item>
    </string-array>
    <string-array name="stream_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="tts_toast_format" formatted="false">缓冲进度为%d%%，播放进度为%d%%</string>
    <string-array name="voicer_xtts_entries">
        <item>小燕</item>
        <item>小峰</item>
    </string-array>
    <string-array name="voicer_xtts_values">
        <item>xiaoyan</item>
        <item>xiaofeng</item>
    </string-array>
    <string-array name="voicer_local_entries">
        <item>小燕</item>
        <item>小峰</item>
    </string-array>
    <string-array name="voicer_local_values">
        <item>xiaoyan</item>
        <item>xiaofeng</item>
    </string-array>
    <string-array name="language_entries">
        <item>普通话</item>
        <item>粤语</item>
        <item>英语</item>
    </string-array>
    <string-array name="language_values">
        <item>mandarin</item>
        <item>cantonese</item>
        <item>en_us</item>
    </string-array>
    <string name="text_en_word">"[word]\napple\nbanana\norange"</string>
    <string name="text_en_sentence">"The quick brown fox jumps over the lazy dog."</string>
    <string name="text_cn_syllable">"知，痴，是"</string>
    <string name="text_cn_word">"磁铁，率领，脆弱，动手，古筝"</string>
    <string name="text_cn_sentence">"一座座雪峰插入云霄，峰顶银光闪闪，大大小小的湖泊，像颗颗宝石镶嵌在彩带般的沟谷中。"</string>
    <string-array name="ise_language_entries">
        <item>英语</item>
        <item>汉语</item>
    </string-array>
    <string-array name="ise_language_values">
        <item>en_us</item>
        <item>zh_cn</item>
    </string-array>
    <string-array name="category_entries">
        <item>单字</item>
        <item>词语</item>
        <item>句子</item>
    </string-array>
    <string-array name="category_values">
        <item>read_syllable</item>
        <item>read_word</item>
        <item>read_sentence</item>
    </string-array>
    <string-array name="result_level_entries">
        <item>plain</item>
        <item>complete</item>
    </string-array>
    <string-array name="punc_entries">
        <item>有标点</item>
        <item>无标点</item>
    </string-array>
    <string-array name="punc_values">
        <item>1</item>
        <item>0</item>
    </string-array>
    <string-array name="dwa_entries">
        <item>开启</item>
        <item>关闭</item>
    </string-array>
    <string-array name="iat_language_entries">
        <item>中文</item>
        <item>英语</item>
        <item>日语</item>
        <item>俄语</item>
        <item>西班牙语</item>
        <item>法语</item>
        <item>韩语</item>
    </string-array>
    <string-array name="iat_language_value">
        <item>zh_cn</item>
        <item>en_us</item>
        <item>ja_jp</item>
        <item>ru-ru</item>
        <item>es_es</item>
        <item>fr_fr</item>
        <item>ko_kr</item>
    </string-array>
    <string-array name="machine_entries">
        <item>鲁谷</item>
        <item>广州</item>
        <item>森华</item>
    </string-array>
    <string-array name="machine_values">
        <item>http://bj.voicecloud.cn/msp.do</item>
        <item>http://gz.voicecloud.cn/msp.do</item>
        <item>http://dx.xf-yun.com/msp.do</item>
    </string-array>
    <string name="example_explain_wake">唤醒是指通过说出特定的唤醒词来唤醒处于休眠状态下的设备，又分为唤醒和唤醒+识别。</string>
    <string name="wake_demo_hint">请点击“开始唤醒”后读出您在开放平台购买的唤醒词，当引擎计算得分大于您设置的门限值时，即可进行唤醒。</string>
    <string name="oneshot_demo_hint">请点击“唤醒+识别”后读出您在开放平台购买的唤醒词+语法中指定的识别对象，当引擎计算得分大于您设置的门限值时，即可进行唤醒+识别。</string>
    <string name="oneshot_resource_hint">本示例识别词语为“张三|李四|张海洋”，请开发者将语法文件中的唤醒词字段替换，本地语法定义详见demo工程的asset/wake.bnf文件。</string>
    <string name="dry">Dry</string>
    <string name="next_one">下一个</string>
    <string name="previous_one">上一个</string>
    <string name="drawer_open">抽屉打开</string>
    <string name="drawer_close">抽屉关闭</string>
    <string name="tip">天天吃肉吃不胖，天天DrySister身体棒</string>
    <string name="menu_see">看看</string>
    <string name="menu_see_little_sister">看小姐姐</string>
    <string name="menu_see_news">读书看报</string>
    <string name="menu_use">用用</string>
    <string name="menu_use_check_weather">查查天气</string>
    <string name="menu_use_check_subway">查查地铁</string>
    <string name="menu_use_tools">小工具箱</string>
    <string name="menu_else">其他</string>
    <string name="menu_else_setting">设置</string>
    <string name="menu_else_about">关于</string>
    <string name="menu_drysister_version">DrySister Version: %1$s</string>
    <string name="working">前方正在施工&#8230;</string>
    <string name="network_unconnected">尚未连接网络，请打开网络重新加载！</string>
    <string name="network_connected_exception">网络连接异常，请稍后重试！</string>
    <string name="network_socket_time_out">网络请求超时，请检查网络状态！</string>
    <string name="network_json_syntax_exception">服务器数据异常，请稍候重试！</string>
    <string name="network_unknown_host">当前网络不可用，请检查网络情况！</string>
    <string name="refresh_success">刷新成功！</string>
    <string name="load_more_num">嘤嘤嘤，新增%1$d枚%2$s！</string>
    <string name="just_load_in_wifi">仅在WIFI下加载图片</string>
    <string name="clear_cache">清空缓存</string>
    <string name="cur_cache">当前缓存 %1$f mb</string>
    <string name="check_update">检查更新</string>
    <string name="cur_version">当前版本 %1$s</string>
    <string name="give_praise">给个好评</string>
    <string name="commit_question">问题反馈</string>
    <string name="share_friends">推荐给好基友</string>
    <string name="contact_me">联系我</string>
    <string name="app_version">Version %1$s</string>
    <string name="about_drysister">关于DrySister</string>
    <string name="about_drysister_detail">
        DrySister，直译干妹子，是小猪2016年写的Android基础入门教程附带的实战项目，
        项目开源，遵循GPL v3协议，
        \n\n仓库地址：https://github.com/coder-pig/DrySister
        \n\n前期代码实现有详细的实现讲解，后面可能只说下遇到的问题以及难点。妹子源会慢慢增加，
        除此之外还会添加一些新的小工具，敬请期待！项目仅用于技术交流学习，请勿用于商业用途！
        \n\n如果你在使用过程中有任何建议或者大胆的想法，
        \n欢迎加QQ群：518568422 进行反馈，
        \n或者在酷安评论区留言与小猪激烈摔♂跤；
        \n\n依次谢谢：
        \n\n 1.代码家提供的Gank.API
        \n 2.Drakeet的开源项目Meizhi
        \n 3.小荳的阿里健康品牌图标库的SVG图标，链接：
        \n http://iconfont.cn/collections/detail?cid=1312
        \n 很萌的一组图标，嘤嘤嘤！
    </string>
    <string name="about_me">关于我</string>
    <string name="about_me_detail">
        一个三流Android开发者，会点Python，
        \n喜欢写有趣的文章，写过一套Android入门教程；
        \n博客：http://blog.csdn.net/coder_pig
        \nGitHub：https://github.com/coder-pig
        \n掘金和简书：太长不贴，自己搜coder-pig
    </string>
    <string name="about_open_source">用到的开源库(闲了再补充协议)</string>
</resources>